--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,6 +15,8 @@
 
     {% if user.is_authenticated %}
       <p>Hi {{ user.username }}</p>
+      <a href="{% url 'logout' %}">Log Out</a>
+      
     {% else %}
       <p>You are not logged in</p>
       <a href="{% url 'login' %}">Log In</a>
